updated project files